Add option to display system operator messages
Emulating the option to view user messages I have included
another useful possibility to view operator messages.

--- a/resources/tn5250jMsgs_de.properties
+++ b/resources/tn5250jMsgs_de.properties
@@ -268,7 +268,8 @@ key.[opennew]=Neue Verbindung öffnen
 key.[togcon]=Verbindung umschalten
 key.[hotspots]=Hotspots umschalten
 key.[gui]=GUI umschalten
-key.[dspmsgs]=Nachrichten anzeigen
+key.[dspmsgs]=Benutzermeldungen anzeigen
+key.[dspoprmsgs]=Bedienermeldungen anzeigen
 key.[dspattr]=Sitzungsattribute
 key.[cursor]=Lineal umschalten
 key.[debug]=Debugmodus umschalten
