--- a/resources/tn5250jMsgs_es.properties
+++ b/resources/tn5250jMsgs_es.properties
@@ -303,7 +303,8 @@ key.[opennew]=Abrir conexión nueva
 key.[togcon]=Alternar conexiones
 key.[hotspots]=Alternar Hotspots
 key.[gui]=Alternar Gui
-key.[dspmsgs]=Ver mensajes
+key.[dspmsgs]=Mensajes del usuario
+key.[dspoprmsgs]=Mensajes del operador
 key.[dspattr]=Atributos de sesión
 key.[cursor]=Alternar guía
 key.[debug]=Alternar depuración
