--- a/resources/tn5250jMsgs_fr.properties
+++ b/resources/tn5250jMsgs_fr.properties
@@ -240,7 +240,8 @@ key.[opennew]=Ouvrir Nouvelle Connection
 key.[togcon]=Toggle Connection
 key.[hotspots]=Toggle Hotspots
 key.[gui]=Toggle Gui
-key.[dspmsgs]=Afficher Messages
+key.[dspmsgs]=Afficher messages de l'utilisateur
+key.[dspoprmsgs]=Afficher messages de l'opérateur
 key.[dspattr]=Attribut Session
 key.[cursor]=Changemet Etat Crosshair
 key.[debug]=Changement Etat Debug
