--- a/resources/tn5250jMsgs_it.properties
+++ b/resources/tn5250jMsgs_it.properties
@@ -305,7 +305,8 @@ key.[opennew]=Apri Nuova Connessione
 key.[togcon]=Commuta Connessione
 key.[hotspots]=Commuta Hotspots
 key.[gui]=Commuta Gui
-key.[dspmsgs]=Mostra Messaggi
+key.[dspmsgs]=Mostra Messaggi dell'utente
+key.[dspoprmsgs]=Mostra Messaggi dell'operatore
 key.[dspattr]=Attributi Sessione
 key.[cursor]=Commuta Cursore
 key.[debug]=Commuta Debug
