--- a/resources/tn5250jMsgs_nl.properties
+++ b/resources/tn5250jMsgs_nl.properties
@@ -292,7 +292,8 @@ key.[opennew]=Maak een Nieuwe Verbinding
 key.[togcon]=Schakel Verbinding
 key.[hotspots]=Schakel Hotspots
 key.[gui]=Schakel Gui
-key.[dspmsgs]=Toon Berichten
+key.[dspmsgs]=Toon gebruiker Berichten
+key.[dspoprmsgs]=Toon operator Berichten
 key.[dspattr]=Sessie Attributen
 key.[cursor]=Schakel Lijnen
 key.[debug]=Schakel Debug
