--- a/resources/tn5250jMsgs_tr_TR.properties
+++ b/resources/tn5250jMsgs_tr_TR.properties
@@ -231,7 +231,8 @@ key.[debug]=Toggle Debug
 key.[delete]=Sil
 key.[down]=\u0130mle\u00E7 A\u015Fa\u011F\u0131
 key.[dspattr]=Session Attributes
-key.[dspmsgs]=Display Messages
+key.[dspmsgs]=Display User Messages
+key.[dspoprmsgs]=Display Operator Messages
 key.[dupfield]=Dup Field
 key.[e-mail]=E-Posta ile Ekran G\u00F6r\u00FCnt\u00FCs\u00FC G\u00F6nder
 key.[enter]=Giri\u015F
