--- a/resources/CHANGELOG.txt
+++ b/resources/CHANGELOG.txt
@@ -4,6 +4,7 @@
 
 --- v0.8.0 ----------------------------------------------------- ??/??/20?? ---
 
+ADD: shortcut to dspmsg qsysopr
 FIX: Charset for CCSID 1145, according to http://www-01.ibm.com/software/globalization
 ADD: font size of keypad is configurable
 ADD: buttons to be shown in keypad are configurable
