Spanish translations: new revision

--- a/resources/tn5250jMsgs_es.properties
+++ b/resources/tn5250jMsgs_es.properties
@@ -52,8 +52,8 @@ popup.disconnect=Desconectar
 popup.connect=Conectar
 popup.close=Cerrar sesión
 popup.send=Enviar...
-popup.quickmail=e-Mail
-popup.email=Pantalla a e-Mail
+popup.quickmail=e-mail
+popup.email=Pantalla a e-mail
 popup.file=Pantalla a archivo
 popup.keyboard=Teclado
 popup.connections=Conexiones
@@ -105,6 +105,8 @@ sa.hsMore=Más...
 sa.hsBottom=Abajo
 sa.kpp=Botones de teclado
 sa.kpCheck=Activar botones de teclado
+sa.kpVisibleButtons=Botones de teclado visibles (disponibles <-> configurados)
+sa.kpResetDefaults=Valores por defecto
 sa.nodeFonts=Tipos de letra
 sa.nodeDisplay=Pantalla
 sa.nodeColors=Colores
@@ -146,7 +148,7 @@ sa.confirmSignoff=Confirmar cierre de sesión
 sa.titleSignoff=Cierre de sesión
 sa.titleErrorReset=Rest Error
 sa.titleTabOptions=Opciones de pestañas
-sa.confirmTabClose=Cerrar la pestaña
+sa.confirmTabClose=Confirmación para cerrar pestañas
 sa.errorReset=Rest Error en error
 sa.titleSignoffRegion=Zona de cierre de sesión
 sa.fromRow=desde fila
@@ -162,8 +164,8 @@ sa.blinkYes=Si
 sa.blinkNo=No
 sa.mouseWheel=Rueda del mouse
 sa.activateMW=Enviar paginar arriba/abajo
-sa.titleBackspace=Error en Back Space
-sa.errorBackspace=Error al pulsar Back Space en el inicio del campo
+sa.titleBackspace=Error en BackSpace
+sa.errorBackspace=Error pulsando BackSpace al inicio de campo
 
 # Configure literals
 conf.title=Configurar sesión
@@ -250,30 +252,30 @@ key.[field+]=Campo más
 key.[field-]=Campo menos
 key.[bof]=Comienzo del campo
 key.[enter]=Intro
-key.[pf1]=PF1
-key.[pf2]=PF2
-key.[pf3]=PF3
-key.[pf4]=PF4
-key.[pf5]=PF5
-key.[pf6]=PF6
-key.[pf7]=PF7
-key.[pf8]=PF8
-key.[pf9]=PF9
-key.[pf10]=PF10
-key.[pf11]=PF11
-key.[pf12]=PF12
-key.[pf13]=PF13
-key.[pf14]=PF14
-key.[pf15]=PF15
-key.[pf16]=PF16
-key.[pf17]=PF17
-key.[pf18]=PF18
-key.[pf19]=PF19
-key.[pf20]=PF20
-key.[pf21]=PF21
-key.[pf22]=PF22
-key.[pf23]=PF23
-key.[pf24]=PF24
+key.[pf1]=F1
+key.[pf2]=F2
+key.[pf3]=F3
+key.[pf4]=F4
+key.[pf5]=F5
+key.[pf6]=F6
+key.[pf7]=F7
+key.[pf8]=F8
+key.[pf9]=F9
+key.[pf10]=F10
+key.[pf11]=F11
+key.[pf12]=F12
+key.[pf13]=F13
+key.[pf14]=F14
+key.[pf15]=F15
+key.[pf16]=F16
+key.[pf17]=F17
+key.[pf18]=F18
+key.[pf19]=F19
+key.[pf20]=F20
+key.[pf21]=F21
+key.[pf22]=F22
+key.[pf23]=F23
+key.[pf24]=F24
 key.[clear]=Limpiar
 key.[help]=Ayuda
 key.[pgup]=Página arriba
@@ -284,7 +286,7 @@ key.[hostprint]=Imprimir Host
 key.[pa1]=PA1
 key.[pa2]=PA2
 key.[pa3]=PA3
-key.[sysreq]=Peticion de sistema
+key.[sysreq]=Petición de sistema
 key.[reset]=Rest Error
 key.[nextword]=Cursor palabra siguiente
 key.[prevword]=Cursor palabra anterior
@@ -297,9 +299,9 @@ key.[markdown]=Marcar abajo
 key.[markright]=Marcar derecha
 key.[dupfield]=Duplicar campo
 key.[newline]=Nueva línea
-key.[jumpnext]=Saltar a sesión siguiente
-key.[jumpprev]=Saltar a sesión anterior
-key.[opennew]=Abrir conexión nueva
+key.[jumpnext]=Sesión siguiente
+key.[jumpprev]=Sesión anterior
+key.[opennew]=Nueva conexión
 key.[togcon]=Alternar conexiones
 key.[hotspots]=Alternar Hotspots
 key.[gui]=Alternar Gui
@@ -311,16 +313,16 @@ key.[debug]=Alternar depuración
 key.[close]=Cerrar sesión
 key.[print]=Imprimir pantalla
 key.[transfer]=Transferir archivo
-key.[e-mail]=Enviar pantalla por e-Mail
+key.[e-mail]=Enviar pantalla por e-mail
 key.[runscript]=Ejecutar script
 key.[spoolfile]=Exportar Spool
-key.[quick-mail]=e-Mail rápido
+key.[quick-mail]=e-mail rápido
 key.[open-same]=Abrir la misma sesión
 key.[fastcursordown]=Cursor rápido abajo
 key.[fastcursorup]=Cursor rápido arriba
 key.[fastcursorright]=Cursor rápido derecha
 key.[fastcursorleft]=Cursor rápido izquierda
-key.labelMap=Mapear Teclado
+key.labelMap=Mapear teclado
 key.labelDone=Terminar
 key.labelRemove=Eliminar
 key.labelKeys=Teclas
@@ -340,11 +342,11 @@ macro.message=Nombre de la macro (sin espacios)
 # File transfer literals
 xtfr.title=Transferir archivo del host
 xtfr.labelAS400=System i
-xtfr.labelpc=PC
+xtfr.labelpc=Pc
 xtfr.labelXTFR=Transferir datos del System i
 xtfr.labelSystemName=Nombre del sistema
 xtfr.labelHostFile=Nombre del archivo
-xtfr.labelPCFile=Nombre del archivo en el PC
+xtfr.labelPCFile=Nombre del archivo en el Pc
 xtfr.labelUserInfo=Información del usuario
 xtfr.labelUserId=Usuario
 xtfr.labelPassword=Contraseña
@@ -354,7 +356,7 @@ xtfr.labelFields=Selección de campos
 xtfr.labelAllFields=Todos los campos
 xtfr.labelSelectedFields=Campos seleccionados
 xtfr.tableColA=Seleccionar
-xtfr.tableColB=Nombre de Campo
+xtfr.tableColB=Nombre de campo
 xtfr.titleFieldSelection=Selección de campo
 xtfr.tableSelectAll=Seleccionar todos
 xtfr.tableSelectNone=Sin seleccionar
@@ -375,8 +377,8 @@ xtfr.labelXTFREmail=Por e-mail
 xtfr.labelFileFormat=Formato de archivo
 xtfr.labelUseQuery=Usar Query
 xtfr.labelQueryWizard=Iniciar Query
-xtfr.wizardTitle=Query SQL Query
-xtfr.labelCustomize=Optimizar
+xtfr.wizardTitle=Generador de SQL
+xtfr.labelCustomize=Personalizar
 xtfr.labelXTFRSave=Guardar
 xtfr.labelXTFRLoad=Cargar
 
@@ -384,7 +386,7 @@ xtfr.labelXTFRLoad=Cargar
 delm.title=Opciones de salida delimitadas
 delm.labelField=Delimitador de campo
 delm.labelText=Delimitador de texto
-delm.labelSpace=Spacio
+delm.labelSpace=Espacio
 delm.labelTab=Tabulación
 delm.labelOptions=Opciones de campo
 delm.labelNone=Ninguno
@@ -400,30 +402,30 @@ cs.message=Sesión a desconectar :
 em.title=Enviar pantalla por e-mail
 em.to=A:
 em.subject=Sujeto:
-em.fileName=Nombre del Archivo: 
+em.fileName=Nombre del archivo:
 em.optSendLabel=Enviar
 em.optCancelLabel=Cancelar
 em.optConfigureLabel=Configurar
-em.optEditLabel=Edit Config
+em.optEditLabel=Editar configuración
 em.labelHost=Host IP
-em.labelPort=Port
-em.labelDefault=Defecto el puerto 25
+em.labelPort=Puerto
+em.labelDefault=Por defecto puerto 25
 em.labelName=Nombre
 em.labelFrom=Dirección de correo
-em.labelFileName=Attachment Name
-em.optDone=Done
-em.configTitle=SMTP Properties Configuration
-em.body=Message
-em.titleFileTransfer=Send Transfer E-mail
-em.titleConfirmation=Mail Confirmation
-em.confirmationMessage=Information sent successfully to:
-em.text=Text
-em.graphic=Graphic
-em.screendump=Screendump
-em.typeofmail=Mail Type:
+em.labelFileName=Nombre del archivo adjunto
+em.optDone=Realizado
+em.configTitle=Configuración SMTP
+em.body=Mensaje
+em.titleFileTransfer=Enviar e-mail
+em.titleConfirmation=Confirmación
+em.confirmationMessage=Información enviada a:
+em.text=Texto
+em.graphic=Gráfico
+em.screendump=Copia de pantalla
+em.typeofmail=Tipo de correo:
 em.normalmail=Normal
-em.screenshot=Screenshot
-em.choosefile=Choose the file to send
+em.screenshot=Pantallazo
+em.choosefile=Seleccione el fichero a enviar
 
 # Spool File Exporter literals
 spool.title=Spool Exporter
@@ -445,7 +447,7 @@ spool.toText=To Text
 spool.labelFormat=File Format
 spool.labelPCPath=PC Path
 spool.labelIFSPath=IFS Path
-spool.labelEmail=E-Mail
+spool.labelEmail=e-mail
 spool.titlePage1=Spool Export Wizard - 1
 spool.titlePage2PDF=Spool Export Wizard PDF - 2
 spool.titlePage2Txt=Spool Export Wizard Text - 2
@@ -473,11 +475,11 @@ spool.labelUseExternal=Open using external editor
 spool.labelFilter=Set filter
 
 # Wizard literals
-wiz.next=Next >>
-wiz.previous=<< Previous
-wiz.finish=Finish
-wiz.cancel=Cancel
-wiz.help=Help
+wiz.next=Siguiente >>
+wiz.previous=<< Anterior
+wiz.finish=Finalizar
+wiz.cancel=Cancelar
+wiz.help=Ayuda
 
 # Translations for the JFileChooser until Sun support more locales
 jfc.Lookin=Look in
@@ -524,7 +526,7 @@ customized.editEntryTitle = Editar el programa externo
 messages.saveSettings=Sesión "{0}" cambiada. ¿Guardar los cambios?
 
 # no email
-messages.noEmailAPI=La API e-Mail de Java no se encuentra o no está instalada\nLea el archivo e-mail.txt para las instrucciones de instalación.
+messages.noEmailAPI=La API e-mail de Java no se encuentra o no está instalada\nLea el archivo e-mail.txt para las instrucciones de instalación.
 
 # as400 toolbox does not exist
 messages.noAS400Toolbox=Esta opción no está disponible ya que no se encuentra Java AS400 Toolbox.\nColóquela en el CLASSPATH para acceder a esta función.
