ConfirmTabCloseDialog: Hardcoded literal
When you try to close the tab, an English text is always displayed.
This patch adds two new literals and modifies the code so that translations can be used.
It also includes the Spanish translation.

--- a/resources/tn5250jMsgs_es.properties
+++ b/resources/tn5250jMsgs_es.properties
@@ -149,6 +149,8 @@ sa.titleSignoff=Cierre de sesión
 sa.titleErrorReset=Rest Error
 sa.titleTabOptions=Opciones de pestañas
 sa.confirmTabClose=Confirmación para cerrar pestañas
+sa.confirmTabCloseTitle=Cerrar pestañas
+sa.confirmTabCloseOK=¿Confirma el cierre de la pestaña?
 sa.errorReset=Rest Error en error
 sa.titleSignoffRegion=Zona de cierre de sesión
 sa.fromRow=desde fila
